--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.4.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-query": "3.39.3",
-    "axios": "1.4.0"
+    "next": "^15.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-query": "^3.39.0",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
